tests/ui/feature-gates/feature-gate-ffi_pure.stderr
error[E0658]: the `#[ffi_pure]` attribute is an experimental feature
  --> $DIR/feature-gate-ffi_pure.rs:4:5
   |
LL |     #[unsafe(ffi_pure)]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58329 <https://github.com/rust-lang/rust/issues/58329> for more information
   = help: add `#![feature(ffi_pure)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
